--- a/app/src/main/res/layout/my_chatting_reply.xml
+++ b/app/src/main/res/layout/my_chatting_reply.xml
@@ -70,7 +70,19 @@
             android:id="@+id/Chatting_WriteDate_TV"
             android:textSize="7dp"
             android:layout_below="@+id/Chatting_Text_Container"
-            android:layout_alignLeft="@id/Chatting_Text_Container"
+            android:layout_toLeftOf="@id/Chatting_Text_Container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
+        <TextView
+            android:id="@+id/Read_Checker_TV"
+            android:visibility="gone"
+            android:paddingRight="5dp"
+            android:layout_alignBottom="@id/Chatting_Text_Container"
+            android:layout_toLeftOf="@id/Chatting_Text_Container"
+            android:text="1"
+            android:textColor="@color/purple_200"
+            android:textSize="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
