--- a/app/src/main/res/layout/chatting_list_item.xml
+++ b/app/src/main/res/layout/chatting_list_item.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
         android:textColor="@android:color/holo_red_light"
-        android:text="10"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
