--- a/app/src/main/res/layout/fragment_set__post__text.xml
+++ b/app/src/main/res/layout/fragment_set__post__text.xml
@@ -3,6 +3,7 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
     tools:context="com.bigjeon.grumbling.fragments.Set_Post_Text_Fragment">
     <RelativeLayout
         android:layout_width="match_parent"
