--- a/app/src/main/res/layout/post_write_loading_dialog.xml
+++ b/app/src/main/res/layout/post_write_loading_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="5dp"
-    android:background="@drawable/loading_bg"
+    android:background="@android:color/transparent"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
